--- a/src/app/pages/extrapages/profile/settings/settings.component.html
+++ b/src/app/pages/extrapages/profile/settings/settings.component.html
@@ -163,14 +163,14 @@
                                                 </div>
                                         </div>
                                     </div><!--end col-->
-                                    <div class="col-lg-6">
+                                    <!--<div class="col-lg-6">
                                         <div class="mb-3">
                                             <label for="JoiningdatInput" class="form-label">Dia de Ingreso</label>
                                             <input class="form-control flatpickr-input" type="text"
                                                 placeholder="Seleccionar dia" mwlFlatpickr [altInput]="true"
                                                 [convertModelValue]="true" formControlName="joinDate">
                                         </div>
-                                    </div><!--end col-->
+                                    </div>-->
                                     <!--<div class="col-lg-12">
                                         <div class="mb-3">
                                             <label for="skillsInput" class="form-label">Skills</label>
