--- a/src/app/pages/projects/create/evaluation/follow/follow.component.html
+++ b/src/app/pages/projects/create/evaluation/follow/follow.component.html
@@ -21,7 +21,7 @@
                                     <span class="badge mb-3" [ngClass]="{
                                         'text-bg-no-evaluado': articulo.project_article.articuloTipo == 'reporte','text-bg-primary': articulo.project_article.articuloTipo == 'permiso', 'text-bg-info': articulo.project_article.articuloTipo == 'monitoreo'}" *ngIf="articulo.project_article && articulo.project_article.articuloTipo">{{articulo.project_article.articuloTipo.toUpperCase() }}</span>
 
-                                    <p class="card-text mb-2" [style]="articulo.descripcion && articulo.descripcion.length > 850 ? 'min-height: 60px;' : 'min-height: 80px;'">{{ articulo.descripcion && articulo.descripcion.length > 850 ? formatArticle(articulo.descripcion, articulo.articulo) : articulo.descripcion }}</p>
+                                    <p class="card-text mb-2" [style]="articulo.descripcion && articulo.descripcion.length > 850 ? 'min-height: 60px;text-align: justify;' : 'min-height: 80px;text-align: justify;'">{{ articulo.descripcion && articulo.descripcion.length > 850 ? formatArticle(articulo.descripcion, articulo.articulo) : articulo.descripcion }}</p>
                                     
                                     <p class="card-text">
                                         <small class="text-success" style="cursor: pointer;" *ngIf="articulo.descripcion && articulo.descripcion.length > 850 && !validatShow(articulo.articulo)" (click)="showText(articulo.articulo)"><b>Leer más</b></small>
