quitar sort en tabla normas

--- a/src/app/pages/projects/normas/normas.component.html
+++ b/src/app/pages/projects/normas/normas.component.html
@@ -48,10 +48,10 @@
                         <table class="table">
                             <thead>
                                 <tr class="bg-light text-muted">
-                                    <th class="sort" data-sort="normaId">IdNorma</th>
-                                    <th class="sort" data-sort="name">Características</th>
-                                    <th class="sort" data-sort="ambito">Ambito</th>
-                                    <th class="sort" style="width: 100px;">Acción</th>
+                                    <th data-sort="normaId">IdNorma</th><!--class="sort" -->
+                                    <th>Características</th>
+                                    <th>Ambito</th>
+                                    <th style="width: 100px;">Acción</th>
                                 </tr>
                             </thead>
                             <tbody>
