--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -88,7 +88,7 @@
                                                                 <div class="col-lg-4 col" (click)="goEvaluation(ev.id)">
                                                                     <div class="row text-muted text-center">
                                                                         <div class="col-12 border-end border-end-dashed">
-                                                                            <h5 class="mb-1"style="color: #405189;"><b>{{ev.evaluador.nombre}}</b></h5>
+                                                                            <h5 class="mb-1"style="color: #405189;"><b>{{ev.evaluador.nombre}} {{ev.evaluador.apellido ? ev.evaluador.apellido : ''}}</b></h5>
                                                                             <p class="text-muted mb-0">Responsable</p>
                                                                         </div>
                                                                     </div>
