--- a/src/app/pages/projects/create/evaluation/follow/follow.component.html
+++ b/src/app/pages/projects/create/evaluation/follow/follow.component.html
@@ -63,7 +63,7 @@
           </div>
           
           <div class="row g-0">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="card-body">
                     <h6>1. Determina el estado del cumplimiento.</h6>
                     <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Seleccione Cumplimiento" data-choices data-choices-search-false
@@ -78,10 +78,10 @@
                     </select>
                 </div>
             </div>
-          </div>
+          <!--</div>
 
-          <div class="row g-0">
-            <div class="col-md-12">
+          <div class="row g-0">-->
+            <div class="col-md-6">
                 <div class="card-body">
                     <h6>2. Define una fecha de evaluación.</h6>
                     <div class="form-icon right" style="width: 400px;">
