--- a/src/app/pages/projects/create/compliance/compliance.component.html
+++ b/src/app/pages/projects/create/compliance/compliance.component.html
@@ -85,7 +85,7 @@
                                             [term]="service.searchTerm"></ngb-highlight></td>
                                     <td>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" [style]="data.avance > 0 ? 'width:'+data.avance+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{data.avance}}%</div>
+                                            <div class="progress-bar" role="progressbar" [style]="data.avance > 0 ? 'width:'+(data.avance > 100 ? 100 : data.avance)+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{(data.avance > 100 ? 100 : data.avance)}}%</div>
                                         </div>
                                     </td>
                                     <!--<td class="status"><span
