--- a/src/app/pages/projects/create/evaluation/task/task.component.html
+++ b/src/app/pages/projects/create/evaluation/task/task.component.html
@@ -48,7 +48,7 @@
               </div>
               
               <div class="row g-0">
-                <div class="col-md-12">
+                <div class="col-md-6">
                     <div class="card-body">
                         <h6>1. Determina el estado del cumplimiento.</h6>
                         <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Seleccione Cumplimiento" formControlName="estado_evaluacion" data-choices data-choices-search-false
@@ -64,10 +64,10 @@
                         </select>
                     </div>
                 </div>
-              </div>
+              <!--</div>
     
-              <div class="row g-0">
-                <div class="col-md-12">
+              <div class="row g-0">-->
+                <div class="col-md-6">
                     <div class="card-body">
                         <h6>2. Define una fecha de evaluación.</h6>
                         <div class="form-icon right" style="width: 400px;">
